# clear-msig

./: .dockerignore  .env.example  .gitignore  .vercelignore  CLAUDE.md  COLOSSEUM_PLAN.md  CONTRIBUTING.md  CORE_USECASE.md  Cargo.toml  DEPLOYMENTS.md  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  MIGRATION.md  Quasar.toml  README.md  SECURITY.md  blog.md  deny.toml  fly.toml  pitch.md  railway.json  render.yaml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/e2e/: Cargo.toml
apps/e2e/src/: constants.rs  ika_evm_demo.rs  main.rs  solana_helpers.rs  typed_sol_devnet.rs
apps/settlement/: .env.example  Cargo.toml
apps/settlement/migrations/: 0001_ramp_core.sql
apps/settlement/src/: app_state.rs  config.rs  db.rs  main.rs
apps/settlement/src/contracts/: api.rs
apps/settlement/src/domain/: state_machine.rs  types.rs
apps/settlement/src/http/: handlers.rs
apps/settlement/src/kora/: client.rs  events.rs  mod.rs  signature.rs
apps/settlement/src/paystack/: client.rs
apps/settlement/src/providers/: mod.rs
apps/settlement/src/services/: intents.rs  webhook_inbox.rs
apps/settlement/src/signer/: bitcoin.rs  engine.rs  evm.rs  solana.rs  zcash.rs
apps/settlement/src/workers/: chain_confirmation.rs  disbursement.rs  payout_dispatch.rs  webhook_processing.rs
backend-api/: .env.pre-alpha  Cargo.toml  README.md
backend-api/src/: clearsign.rs  cors.rs  error.rs  intents.rs  main.rs  pro.rs  proposals.rs  runner.rs  runtime.rs  state.rs  validation.rs  wallet.rs
backend-api/src/clearsign/: device_profiles.rs  display.rs  document.rs  expiry.rs  hash.rs  kinds.rs  payload.rs  presigned.rs
backend-api/src/pro/: audit.rs  escrow.rs
backend-api/src/proposals/: typed_execution.rs  typed_lifecycle.rs  types.rs  validation.rs
backend-api/src/wallet/: membership.rs
cli/: Cargo.toml
cli/src/: accounts.rs  adapter.rs  config.rs  direct.rs  direct_tests.rs  execution.rs  ika.rs  instructions.rs  lib.rs  lifecycle.rs  main.rs  message.rs  output.rs  params.rs  resolve.rs  rpc.rs  signing.rs
cli/src/chains/: bitcoin.rs  evm.rs  mod.rs  solana_broadcast.rs  zcash.rs
cli/src/commands/: config.rs  intent.rs  mod.rs  proposal.rs  wallet.rs
cli/src/quasar_client/: approve.rs  bind_dwallet.rs  create_wallet.rs  execute.rs  ika_sign.rs  propose.rs
crates/clear-msig-execution/: Cargo.toml
crates/clear-msig-execution/src/: accounts.rs  config.rs  control.rs  direct.rs  execution.rs  ika.rs  instructions.rs  lib.rs  lifecycle.rs  message.rs  output.rs  params.rs  resolve.rs  rpc.rs  signing.rs
crates/clear-msig-execution/src/chains/: bitcoin.rs  delivery.rs  delivery_identity.rs  delivery_probe.rs  delivery_redis.rs  delivery_store.rs  evm.rs  mod.rs  transport.rs  zcash.rs
crates/clear-msig-execution/src/commands/: config.rs  intent.rs  proposal.rs  wallet.rs
crates/clear-msig-execution/src/commands/proposal/: action.rs  agent_risk.rs  execution.rs  handlers.rs  tests.rs
crates/clear-msig-execution/src/ika/: preimage.rs
crates/clear-msig-execution/src/instructions/: agents.rs  escrow.rs  governance.rs  lifecycle.rs  proposal.rs  recurring.rs  remote.rs  solana.rs  tests.rs
crates/clear-msig-execution/src/quasar_client/: execute.rs  mod.rs
e2e/: Cargo.toml
e2e/src/: ika_evm_demo.rs  ika_helpers.rs  main.rs  messages.rs  output.rs  solana_helpers.rs  typed_sol_devnet.rs
e2e/src/quasar_client/: approve.rs  bind_dwallet.rs  create_wallet.rs  execute.rs  ika_sign.rs  propose.rs
programs/clear-wallet/: Cargo.toml  Quasar.toml
programs/clear-wallet/client/: Cargo.toml
programs/clear-wallet/client/src/: chains.rs  intent_builder.rs  intent_json.rs  lib.rs  pda.rs
programs/clear-wallet/src/: error.rs  lib.rs  tests.rs
programs/clear-wallet/src/chains/: bitcoin.rs  evm.rs  mod.rs  solana_dwallet.rs  zcash.rs
programs/clear-wallet/src/instructions/: approve.rs  asset_policy.rs  bind_dwallet.rs  cancel.rs  cleanup_proposal.rs  create_wallet.rs  execute.rs  ika_sign.rs  mod.rs  propose.rs  recurring_asset_schedule.rs  recurring_schedule.rs  typed_agent.rs  typed_agent_risk.rs  typed_chain_send.rs  typed_chain_sign.rs  typed_cross_chain_escrow.rs  typed_escrow.rs  typed_governance.rs  typed_private_escrow.rs  typed_proposal.rs  typed_send.rs  typed_token_escrow.rs  wallet_policy.rs
programs/clear-wallet/src/state/: agent_risk.rs  agent_session.rs  asset_policy.rs  asset_policy_spend.rs  dwallet_ownership.rs  ika_config.rs  intent.rs  member_allowance.rs  mod.rs  policy_spend.rs  proposal.rs  recurring_schedule.rs  typed_proposal.rs  wallet.rs  wallet_policy.rs
programs/clear-wallet/src/tests/: agents.rs  clear_sign_binding.rs  escrow_native.rs  escrow_remote.rs  legacy_intent_lifecycle.rs  legacy_proposal_creation.rs  legacy_proposal_enforcement.rs  legacy_transfers.rs  recurring_asset_policy.rs  recurring_schedule.rs  remote_assets.rs  solana_batch.rs  solana_policy_enforcement.rs  solana_policy_ledger.rs  wallet_basics.rs
programs/clear-wallet/src/utils/: advanced_policy.rs  asset_policy.rs  base58.rs  clearsign.rs  clearsign_tests.rs  datetime.rs  definition.rs  hash.rs  ika_cpi.rs  keccak.rs  message.rs  mod.rs  policy.rs  token.rs
rust-settlement/: .env.example  .gitignore  Cargo.toml  README.md
rust-settlement/migrations/: 0002_clear_msig_chains.sql  0003_pro_payouts.sql
rust-settlement/src/: app_state.rs  config.rs  db.rs  lib.rs  main.rs
rust-settlement/src/contracts/: api.rs
rust-settlement/src/domain/: state_machine.rs  types.rs
rust-settlement/src/http/: handlers.rs
rust-settlement/src/kora/: client.rs  signature.rs
rust-settlement/src/paystack/: client.rs  events.rs  mod.rs  signature.rs
rust-settlement/src/providers/: mod.rs
rust-settlement/src/services/: idempotency.rs  intents.rs  mod.rs  pro_payouts.rs
rust-settlement/src/signer/: bitcoin.rs  engine.rs  evm.rs  mod.rs  solana.rs  sui.rs  zcash.rs
rust-settlement/src/workers/: chain_confirmation.rs  disbursement.rs  mod.rs  payout_dispatch.rs  pro_payout_dispatch.rs  webhook_processing.rs
rust-settlement/tests/: paystack_signature.rs
(+1341 files in other folders)
