[workspace]
resolver = "2"
members = [
    "crates/clear-msig-command-contract",
    "programs/clear-wallet",
    "programs/clear-wallet/client",
    "cli",
    "e2e",
    "backend-api",
]
default-members = [
    "programs/clear-wallet",
]

[patch.crates-io]
solana-curve25519 = { path = "deps/solana-curve25519" }
