[workspace]
resolver = "2"
members = [
    "crates/clear-msig-command-contract",
    "crates/clear-msig-execution",
    "crates/clear-msig-intent",
    "crates/clear-msig-signing",
    "programs/clear-wallet",
    "programs/clear-wallet/client",
    "apps/api",
    "apps/cli",
    "apps/e2e",
]
default-members = [
    "programs/clear-wallet",
]

[patch.crates-io]
solana-curve25519 = { path = "deps/solana-curve25519" }
