[package]
name = "clear-msig-backend-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clear-msig-backend-api"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "signal", "io-util", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
bs58 = "0.5"
# For SSE streaming: Stream trait + `.map` adapter.
futures-core = "0.3"
futures-util = "0.3"
