[package]
name = "clear-msig-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clear-msig"
path = "src/main.rs"

[dependencies]
clear-wallet-client = { path = "../programs/clear-wallet/client" }
clear-wallet = { path = "../programs/clear-wallet", features = ["client"] }
quasar-lang = { git = "https://github.com/blueshift-gg/quasar", branch = "fix/signer-check-and-wincode-versions" }
clap = { version = "4", features = ["derive"] }
# solana-instruction v3 matches quasar's generated types.
# solana-client/transaction/remote-wallet stay on v2 (v4 is beta-only).
solana-pubkey = { version = "2", features = ["sha2", "curve25519"] }
solana-instruction = "2"
solana-instruction-v3 = { package = "solana-instruction", version = "3" }
solana-pubkey-v4 = { package = "solana-pubkey", version = "4" }
solana-signer = "2"
solana-keypair = "2"
solana-signature = "2"
solana-transaction = "2"
solana-commitment-config = "2"
solana-client = "2"
solana-remote-wallet = "2"
solana-sdk-ids = "2"
solana-derivation-path = "2"
solana-address = { version = "2", features = ["curve25519"] }
# Umbrella crate kept for the session work that uses solana_sdk::{system_program,
# pubkey::Pubkey, signer::Signer, instruction::*}. Upstream's "Cli using actual
# generated types" commit dropped it in favor of split crates; we re-add it
# here so the dWallet integration code (which predates that split) keeps
# compiling without a sweeping rewrite.
solana-sdk = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
brine-ed25519 = { git = "https://github.com/ChewingGlass/brine-ed25519", default-features = false }
sha2 = "0.10"
bs58 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dialoguer = "0.11"
anyhow = "1"
dirs = "5"
shellexpand = "3"
hex = "0.4"
tiny-keccak = { version = "2.0", features = ["keccak"] }
k256 = { version = "0.13", features = ["ecdsa"] }
ripemd = "0.1"
bech32 = "0.11"
# Used by `proposal execute --broadcast` to push signed EVM RLP envelopes
# directly to a Sepolia / mainnet / chain-of-choice JSON-RPC endpoint after
# the dwallet network returns the signature, so the CLI can take an
# approved proposal all the way to a real on-chain transaction in one shot.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Ika dWallet integration (used by `wallet add-chain` and the chain-aware
# `proposal execute`). Local async runtime created on demand so the rest of
# the CLI stays sync.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tonic = { version = "0.14", features = ["tls-native-roots"] }
prost = "0.14"
# Pinned to commit 3bd7945e (2026-04-17) — latest post-redesign commit that
# exports DWalletSignatureScheme, UserSecretKeyShare, VersionedDWalletDataAttestation,
# VersionedPresignDataAttestation (all referenced by cli/src/ika.rs). The
# previous pin (40ba20db, 2026-04-08) predates the "Redesign gRPC types,
# versioned attestations, all schemes" commit at 97b72f8d and does not
# compile against the current Ika integration code.
ika-grpc = { git = "https://github.com/dwallet-labs/ika-pre-alpha.git", rev = "3bd7945e012950e54fb4d0057b72a7d466556fc1", package = "ika-grpc" }
ika-dwallet-types = { git = "https://github.com/dwallet-labs/ika-pre-alpha.git", rev = "3bd7945e012950e54fb4d0057b72a7d466556fc1", package = "ika-dwallet-types" }
bcs = "0.1"

# BLAKE2b for Zcash transparent sighash computation (ZIP-243).
blake2b_simd = "1"
# Serialize Solana transactions for broadcast.
bincode = "1"

# Vendored copy of the Quasar-generated clear-wallet client. Required because
# the program uses `wincode` for instruction data, not raw byte appends.
wincode = { version = "0.4", features = ["derive", "std"] }
