[package]
name = "e2e-clear-msig-ika"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Clear"
publish = false

[[bin]]
name = "e2e-clear-msig-ika"
path = "src/main.rs"

[[bin]]
name = "e2e-typed-sol-devnet"
path = "src/typed_sol_devnet.rs"

[dependencies]
clear-wallet = { path = "../programs/clear-wallet", features = ["client"] }
clear-wallet-client = { path = "../programs/clear-wallet/client" }

solana-sdk = "2.2"
solana-rpc-client = "2.2"
solana-address = { version = "2", features = ["curve25519"] }
solana-instruction = "3"
wincode = { version = "0.4", features = ["derive", "std"] }
# Pin the same branch the CLI uses. Without this, cargo resolves a stale
# master checkout (6afb2ca) that predates the `TailBytes` export, and e2e
# fails to compile the vendored ProposeInstruction. Match cli/Cargo.toml.
quasar-lang = { git = "https://github.com/blueshift-gg/quasar", branch = "fix/signer-check-and-wincode-versions" }

ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"
bs58 = "0.5"

# gRPC + Ika types
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["tls-native-roots"] }
prost = "0.14"
# Same pin as cli/Cargo.toml — 3bd7945e (2026-04-17). See that file for why.
ika-grpc = { git = "https://github.com/dwallet-labs/ika-pre-alpha.git", rev = "3bd7945e012950e54fb4d0057b72a7d466556fc1", package = "ika-grpc" }
ika-dwallet-types = { git = "https://github.com/dwallet-labs/ika-pre-alpha.git", rev = "3bd7945e012950e54fb4d0057b72a7d466556fc1", package = "ika-dwallet-types" }
bcs = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
