[package]
name = "rust-settlement"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
ethers = { version = "2.0", features = ["rustls"] }
futures = "0.3"
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }
sui-crypto = { version = "0.2.0", features = ["ed25519"] }
sui-rpc = "0.2.2"
sui-sdk-types = "0.2.2"
sui-transaction-builder = { version = "0.2.2", default-features = false }
thiserror = "2.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.10", features = ["serde", "v4"] }

[dev-dependencies]
pretty_assertions = "1.4"
