[package]
name = "clear-msig-cli"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[[bin]]
name = "clear-msig"
path = "src/main.rs"

[dependencies]
clear-msig-execution = { path = "../../crates/clear-msig-execution" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
