[package]
name = "e2e-clear-msig-ika"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Clear"
publish = false

[[bin]]
name = "e2e-clear-msig-ika"
path = "src/main.rs"

[[bin]]
name = "e2e-typed-sol-devnet"
path = "src/typed_sol_devnet.rs"

[dependencies]
clear-msig-intent = { path = "../../crates/clear-msig-intent" }
clear-wallet = { path = "../../programs/clear-wallet", features = ["client"] }
clear-wallet-client = { path = "../../programs/clear-wallet/client" }

solana-sdk = "3"
solana-rpc-client = "3.1"
solana-commitment-config = "3"
solana-compute-budget-interface = "3"
solana-sdk-ids = "3"
solana-address = { version = "2", features = ["curve25519"] }
solana-instruction = "3"
wincode = { version = "0.4", features = ["derive", "std"] }
# Keep the same immutable Quasar revision as the generated program client.
quasar-lang = { git = "https://github.com/blueshift-gg/quasar", rev = "0e7559496b86aebe300254d90baa7210672c1cbf" }

ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"
bs58 = "0.5"

# gRPC + Ika types
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["tls-native-roots"] }
prost = "0.14"
# Same pin as apps/cli/Cargo.toml — 3bd7945e (2026-04-17). See that file for why.
ika-grpc = { git = "https://github.com/dwallet-labs/ika-pre-alpha.git", rev = "3bd7945e012950e54fb4d0057b72a7d466556fc1", package = "ika-grpc" }
ika-dwallet-types = { git = "https://github.com/dwallet-labs/ika-pre-alpha.git", rev = "3bd7945e012950e54fb4d0057b72a7d466556fc1", package = "ika-dwallet-types" }
bcs = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
