[package]
name = "clear-wallet-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clear-wallet = { path = ".." }
quasar-lang = { git = "https://github.com/blueshift-gg/quasar", branch = "master" }
solana-address = { version = "2", features = ["curve25519"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bs58 = "0.5"

[dev-dependencies]
# Cross-check our BIP143 implementation against the canonical rust-bitcoin
# sighash, plus sign + verify with libsecp256k1.
bitcoin = "0.32"
secp256k1 = { version = "0.29", features = ["global-context", "rand"] }
hex = "0.4"
