[package]
name = "clear-wallet-client"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
clear-msig-intent = { path = "../../../crates/clear-msig-intent" }
clear-wallet = { path = ".." }
quasar-lang = { git = "https://github.com/blueshift-gg/quasar", rev = "0e7559496b86aebe300254d90baa7210672c1cbf" }
solana-address = { version = "2", features = ["curve25519"] }
solana-instruction = "3"
wincode = { version = "0.4", features = ["derive", "std"] }
sha2 = "0.10"
serde_json = "1"
bs58 = "0.5"

[dev-dependencies]
# Cross-check our BIP143 implementation against the canonical rust-bitcoin
# sighash, plus sign + verify with libsecp256k1.
bitcoin = "0.32"
secp256k1 = { version = "0.29", features = ["global-context", "rand"] }
hex = "0.4"
